# SchedPlus

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  upload_solution.sh
lib/: openGA.hpp
src/: CMakeLists.txt  Components.h  Route.cpp  Route.h  Utils.h  main.cpp
src/Delivery/: DeliveryGuarantee.cpp  DeliveryGuarantee.h
src/components/: Flow.cpp  Flow.h  Link.cpp  Link.h  Node.cpp  Node.h  NodeImpl.cpp  NodeImpl.h  Port.cpp  Port.h
src/include/: MyVlan.h  type.h
src/lib/: Route.h
src/lib/components/: Flow.cpp  Flow.h  Link.cpp  Link.h  MyVlan.h  Node.cpp  Node.h  NodeImpl.cpp  NodeImpl.h  Port.h
src/solutions/: GA.h  GA_4sw_ring.h  GA_Solution.h  GA_line_2_1.h  GA_line_2_2.h  MyFunctions.h  NoWait.h  SaveSolution.cpp  SaveSolution.h  Wait.h
test/flows/: flows_Small_10.json  flows_Small_20.json  flows_Small_30.json  flows_Small_40.json  flows_Small_4_ring_10.json  flows_Small_4_ring_20.json  flows_Small_4_ring_30.json  flows_Small_4_ring_40.json  flows_Small_4_ring_50.json  flows_Small_50.json  flows_Small_line_2_2_10.json  flows_Small_line_2_2_20_1.json  flows_Small_line_2_2_20_2.json  flows_Small_line_2_2_20_3.json  flows_Small_line_2_2_30_1.json  flows_Small_line_2_2_30_2.json  flows_Small_line_2_2_30_3.json  flows_Small_line_2_2_40_1.json  flows_Small_line_2_2_40_2.json  flows_Small_line_2_2_50.json  flows_Small_tree_10.json  flows_Small_tree_20.json  flows_Small_tree_30.json  flows_Small_tree_40.json  flows_Small_tree_50.json
